<resources>
    <string name="app_name">FethiSpat</string>
    <string name="acceder">Iniciar sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate_aqui">Regístrate aquí</string>
    <string name="olvidaste_tu_contra">¿Olvidaste tu contraseña?</string>
    <string name="contra">Contraseña</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="restablecer_contra">Restablecer Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="inicia_sesion">Inicia sesión aquí</string>
    <string name="atras_para_iniciar_sesion">Atras para iniciar sesión</string>
    <string name="registro">Registro</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="genero">Género:</string>
    <string name="mas18">Tengo más de 18 años</string>
    <string name="al_enviar_este_formulario_leo_y_acepto">Al enviar este formulario, leo y acepto</string>
    <string name="repetir_contra">Repetir contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="pies">Pies</string>
    <string name="boca">Boca</string>
    <string name="manos">Manos</string>
    <string name="ojos">Ojos</string>
    <string name="nariz">Nariz</string>
    <string name="otros">Otros</string>
    <string name="comprar">Comprar</string>
    <string-array name="genero_array">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
</resources>