<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".PaginaInicial">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="200dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="100dp"
                android:text="@string/pies"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="100dp"
                android:text="@string/boca"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="200dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="100dp"
                android:text="@string/manos"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="200dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="100dp"
                android:text="@string/ojos"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="200dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="100dp"
                android:text="@string/nariz"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="200dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="100dp"
                android:text="@string/otros"
                android:layout_margin="8dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:padding="8dp"/>

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="perfil"
            android:src="@drawable/usuario"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:padding="8dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

